--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 express-server1&rute/node_modules
 get-post-exp-rute-use/node_modules
+node/datSubmit-to-server/node_modules
+mongoos/base/node_modules
